--- a/wp-content/themes/understrap-child/sass/theme/partials/base/_type_style_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/base/_type_style_variables.scss
@@ -35,7 +35,7 @@ font-weight:        $headline-font-weight;
 
 font-family:        $subhead-font-family;
 color:              $subhead-color;        
-font-weight:        400;
+font-weight:        $subhead-font-weight;  
                     
 }
 
