--- a/wp-content/themes/understrap-child/sass/theme/partials/utilities/_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/utilities/_layout_styles.scss
@@ -3,143 +3,105 @@
 // ==========================================================================
 
 //sections
-#section__my-value{}
-#section__home-page{}
-#section__why-me{}
-#section__my-expertise{}
-#section__about-me{}
-
-
-
-@include mq('tablet', $type:max){
-    .content__wrapper{
-        margin: 12em auto;
-    }
-    .link{
-        @include vr($margin: 6 auto 2 auto);
-    }
-    .summary h1, .business-value h1{
-        @include vr($margin-bottom: 6);
-    }
-
-    #management__splash h1{
-        margin-bottom: 2em;
-    }
-
+#section__my-value { }
+#section__home-page { }
+#section__why-me { }
+#section__my-expertise { }
+#section__about-me { }
+@include mq('tablet', $type:max) { .content__wrapper { margin: 12em auto; }
+    .link { @include vr($margin: 6 auto 2 auto); }
+    .article__head h1, .business-value h1 { @include vr($margin-bottom: 6); }
+    #management__splash h1 { margin-bottom: 2em; }
 }
-
 //core = homepage  alternate = why - me
-@media (max-width: 48em){
-.core, .my-value, .why-me, .alternate{
+@media (max-width:48em) {
+    .core, .my-value, .why-me, .alternate { }
 }
-}
-
-
-
 //compensation for smaller mobile/tablets when in landscape mode
-@media only screen and (max-height: 25em){
-    .splash{
-        min-height: 600px;
-        height: unset;
-    }
-    .core{
-        height: unset;
-    }
-     .container{
-    width: 90%;
-    }
-    #wrapper__whatido{
-        height: unset;
-    }
-
-    }
-
-@media only screen and (max-width: 40em) and (max-height: 25em){
-    #my-brains{
-        width: 45%;
-        left: 55%;
-    }
-}    
-
-
-
+@media only screen and (max-height:25em) {
+    .splash { min-height: 600px; height: unset; }
+    .core { height: unset; }
+    .container { width: 90%; }
+    #wrapper__whatido { height: unset; }
+}
+@media only screen and (max-width:40em) and (max-height:25em) {
+    #my-brains { width: 45%; left: 55%; }
+}
 // ==========================================================================
-// home
+// splash
 // ==========================================================================
-.core{
 
-
-
-@include mq('phone'){}
-@include mq('phone-wide'){
- 
+.splash-wrapper { overflow: hidden; }
+.splash { @include split-rows(); @include left-middle(); height: 100vh;
+    h1 { flex: 0 0 auto; }
+    h2 { flex: 0 0 auto; }
+    h3 { flex: 0 0 auto; }
+    p { flex: 0 0 auto; }
+    .link { position: absolute; flex: 0 0 0; left: 50%; bottom: 6em; }
 }
-@include mq('phablet'){}
-@include mq('tablet-small'){}
-@include mq('tablet'){
+// ==========================================================================
+// home page articles
+// ==========================================================================
+.core { @include mq('phone') { }
+    @include mq('phone-wide') { }
+    @include mq('phablet') { }
+    @include mq('tablet-small') { }
+    @include mq('tablet') { }
+    @include mq('tablet-wide') { }
+    @include mq('desktop') { }
+    @include mq('desktop-wide') { }
+    @include mq('desktop-xl') { }
+    @include mq('desktop-xxl') { }
+}
+.core { 
+    h1 { flex: 0 0 auto; }
+    h2 { flex: 0 0 auto; }
+    h3 { flex: 0 0 auto; }
+    .content-container { flex: 0 0 auto; }
+    .link { flex: 0 0 0; }
+}
+.article__head { 
+    h1 { flex: 0 0 auto; }
+    h2 { flex: 0 0 auto; }
+    h3 { flex: 0 0 auto; }
+    .content-container {flex: 0 0 auto; }
+    .link { flex: 0 0 0; }
+}
+// ==========================================================================
+// services articles
+// ==========================================================================
 
-}
-@include mq('tablet-wide'){}
-@include mq('desktop'){
-}
-@include mq('desktop-wide'){}
-@include mq('desktop-xl'){}
-@include mq('desktop-xxl'){}
-}
 
-.core{
- h1{flex: 0 0 auto;}
- h2{flex: 0 0 auto;}
- h3{flex: 0 0 auto;}
- .content-container{flex: 0 0 auto;}
- .link{flex: 0 0 0;}
 
-}
+
+
+
+
+
+
+
 
 // ==========================================================================
 // my value
 // ==========================================================================
 
-#objectives{
-@include mq('tablet-wide'){
-    height: 80vh;
-    justify-content: space-around;
-    display: flex;
-    flex-direction: column;
-h1{flex: 1 0 auto;}
-.page__header{flex: 0 0 auto;}
-.diagram {flex: 0 0 auto; margin: 4rem auto;}
-.my-value__conclusion{flex: 1 0 auto;} 
-a{flex: 0 0 auto; align-self: center;}
-
+#objectives { @include mq('tablet-wide') { height: 80vh; justify-content: space-around; display: flex; flex-direction: column;
+        h1 { flex: 1 0 auto; }
+        .page__header { flex: 0 0 auto; }
+        .diagram { flex: 0 0 auto; margin: 4rem auto; }
+        .my-value__conclusion { flex: 1 0 auto; }
+        a { flex: 0 0 auto; align-self: center; }
+    }
 }
+#grow { @include mq('tablet-wide') { height: 80vh;
+        .diagram, .my-value__conclusion { height: 50vh; }
+    }
 }
-
-
-#grow{
-
-@include mq('tablet-wide'){
-height: 80vh;
-.diagram, .my-value__conclusion{ height: 50vh; }   
-}   
+#modernize { @include mq('tablet-wide') { height: 80vh; }
 }
-
-#modernize{
-@include mq('tablet-wide'){
-    height: 80vh;
+#optimize { @include mq('tablet-wide') { height: 80vh; }
 }
-}
-
-#optimize{
-@include mq('tablet-wide'){
-    height: 80vh;
-}
-}
-
-#cta__value{
-height: 100vh;
-}
-
+#cta__value { height: 100vh; }
 // ==========================================================================
 // expertise
 // ==========================================================================
@@ -150,11 +112,7 @@ height: 100vh;
 // why me
 // ==========================================================================
 
-.why-me__categories_content{
-    margin-bottom: 2rem;
-}
+.why-me__categories_content { margin-bottom: 2rem; }
 // ==========================================================================
 // contact
 // ==========================================================================
-
-
