--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/_layout_styles_import.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/_layout_styles_import.scss
@@ -16,10 +16,14 @@
 @import "theme/partials/layout/article_styles/home_page_articles_styles_v2";
 // @import "theme/partials/layout/article_styles/home_page_articles_styles";
 @import "theme/partials/layout/article_styles/my_expertise_page_articles_styles";
-@import "theme/partials/layout/article_styles/management_page_articles_styles";
+// @import "theme/partials/layout/article_styles/management_page_articles_styles";
 @import "theme/partials/layout/article_styles/development_page_articles_styles";
 @import "theme/partials/layout/article_styles/hire_me_page_articles_styles";
 
+@import "theme/partials/layout/article_styles/base_articles_styles";
+@import "theme/partials/layout/article_styles/services_articles_styles";
+@import "theme/partials/layout/article_styles/background_articles_styles";
+@import "theme/partials/layout/article_styles/evidence_articles_styles";
 
 @import "theme/partials/layout/article_styles/atypical_article_customization";
 @import "theme/partials/layout/article_styles/brand_history_customization";
