--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_development_page_articles_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_development_page_articles_styles.scss
@@ -1,72 +1,72 @@
-  .summary{
-  h1 {
-        @extend .page__title;
-        flex: 0 0 auto;
-        margin-top: auto;
-    }
+//   .article__head{
+//   h1 {
+//         @extend .page__title;
+//         flex: 0 0 auto;
+//         margin-top: auto;
+//     }
 
-    h2 {
-        @extend %headline;
-        flex: 0 0 auto;
+//     h2 {
+//         @extend %headline;
+//         flex: 0 0 auto;
 
-    }
+//     }
 
-    h3 {
-        flex: 0 0 auto;
-    @extend %subhead;
-    }
+//     h3 {
+//         flex: 0 0 auto;
+//     @extend %subhead;
+//     }
 
-    h4{
-     flex: 0 0 auto;
-/*      @extend %display-text-lg; */
-    }
- /*         @extend %display-text-lg;  */
+//     h4{
+//      flex: 0 0 auto;
+// /*      @extend %display-text-lg; */
+//     }
+//  /*         @extend %display-text-lg;  */
 
-    p {
-        @extend %display-text-lg;
-        flex: 0 0 auto;
-        margin-bottom: auto;
+//     p {
+//         @extend %display-text-lg;
+//         flex: 0 0 auto;
+//         margin-bottom: auto;
 
-    }
+//     }
 
-}
+// }
 
 
-#article__container--development-intro{
+// #article__container--development-intro{
 
-.intro > h3{
-@include vr($margin: 2 auto);
-color: $primary;
-}
+// .intro > h3{
+// @include vr($margin: 2 auto);
+// color: $primary;
+// }
 
-.intro__list{
-@include make-col-ready();
-@include make-col(5);
-padding-left: 0px;
-padding-right: 0px;
-}
+// .intro__list{
+// @include make-col-ready();
+// @include make-col(5);
+// padding-left: 0px;
+// padding-right: 0px;
+// }
 
-.intro{
-& h4{
-   font-family: $font-family-monospace;
-   @include vr($font-size: 1, $line-height: 1.5, $margin-top: 4);
-   font-weight: 500;
-}
-& .content__item_caption{
-    padding: 0;
-    @include vr($line-height: 1.5);
-}
-& ol{
+// .intro{
+// & h4{
+//    font-family: $font-family-monospace;
+//    @include vr($font-size: 1, $line-height: 1.5, $margin-top: 4);
+//    font-weight: 500;
+// }
+// & .content__item_caption{
+//     padding: 0;
+//     @include vr($line-height: 1.5);
+// }
+// & ol{
 
-    @include vr($padding-left: 2, $margin-top: 1);
-    & li, li a, li a::before{ 
-         font-family: $font-family-monospace;
-        @include vr($font-size: 1, $line-height: 1.5, $margin: 1 0);
-        font-weight: 500;
-        }
-}
-}
-}
+//     @include vr($padding-left: 2, $margin-top: 1);
+//     & li, li a, li a::before{ 
+//          font-family: $font-family-monospace;
+//         @include vr($font-size: 1, $line-height: 1.5, $margin: 1 0);
+//         font-weight: 500;
+//         }
+// }
+// }
+// }
 
 
 
