--- a/wp-content/themes/understrap-child/sass/theme/partials/utilities/_flex_state_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/utilities/_flex_state_styles.scss
@@ -18,7 +18,7 @@
     .link{
         @include vr($margin: 6 auto 2 auto);
     }
-    .summary h1, .business-value h1{
+    .article__head h1, .business-value h1{
         @include vr($margin-bottom: 6);
     }
 
