--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -34,16 +34,16 @@
 
 @import "theme/partials/base/container_styles";
 @import "theme/partials/base/menu_styles";
-
+@import "theme/partials/base/vert_rhythm_styles";
 @import "theme/partials/layout/layout_styles_import";
 @import "theme/partials/utilities/graphics_and_artwork_styles";
 @import "theme/partials/utilities/layout_styles";
 @import "theme/partials/utilities/display_state_styles"; 
 
-@import "theme/partials/base/vert_rhythm_styles";
 
-/* @import "theme/dev_utilities/sandbox";
- @import "theme/atomicmouse";   */
+
+ @import "theme/dev_utilities/sandbox";
+ // @import "theme/atomicmouse";   
 
 
 
