--- a/wp-content/themes/understrap-child/sass/theme/partials/base/_global_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/base/_global_styles.scss
@@ -8,17 +8,22 @@ $zindex-modal:                      1050 !default;
 $zindex-popover:                    1060 !default;
 $zindex-tooltip:                    1070 !default; */
 
+   $vr-font-size: 12px;
+   $vr-modular‑scale: perfect-fifth;
+
 @include vr-reset(
     $helpers: false,
+    $font-size: 8px,
+    $modular-scale: perfect-fifth,
     $breakpoints:(
-    1em: ( // 400px
-      font-size: 6px,
-      line-height: 1.5,
-      modular-scale: perfect-fifth,
-      grid-color: purple
-    ),
+    // 1em: ( // 400px
+    //   font-size: 6px,
+    //   line-height: 1.5,
+    //   modular-scale: perfect-fifth,
+    //   grid-color: purple
+    // ),
     25em: ( // 400px
-      font-size: 8px,
+      font-size: 14px,
       line-height: 1.5,
       modular-scale: perfect-fifth,
       grid-color: purple
@@ -95,7 +100,7 @@ html [type=button] {
 body {
     height: 100%;
     // padding-top: $navbar-height;
-/* @include vr-grid(); */
+ // @include vr-grid(); 
 /*      flex-direction: column; */
 }
 
